--- a/ex04/src/main/resources/templates/usuarios.html
+++ b/ex04/src/main/resources/templates/usuarios.html
@@ -69,5 +69,8 @@
     <form th:action="@{/addUser}" method="get">
         <button type="submit">Adicionar Usuário</button>
     </form>
+    <form th:action="@{/return}" method="get">
+        <button type="submit">Retornar</button>
+    </form>
 </body>
 </html>
